# AI_translate

./: CalculatorStrings.xlsx  README.md  app..py  gradio_app.py  pyproject.toml  requirements.txt  test.py
src/languageexport/: crew.py  flow.py  main.py
src/languageexport/config/: agents.yaml  tasks.yaml
src/languageexport/tools/: custom_tool.py
