[project]
name = "languageexport"
version = "0.1.0"
description = "LanguageExport using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0",
    "gradio>=5.25.2",
    "pandas>=2.2.3",
    "tk>=0.1.0",
]

[project.scripts]
languageexport = "languageexport.main:run"
run_crew = "languageexport.main:run"
train = "languageexport.main:train"
replay = "languageexport.main:replay"
test = "languageexport.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
